theme, spacing, and sizing fixes

--- a/src/app-header/app-header.component.scss
+++ b/src/app-header/app-header.component.scss
@@ -85,6 +85,13 @@
         }
       }
     }
+
+    #add {
+      position: absolute;
+      right: 20px;
+      bottom: -20px;
+      z-index: 998;
+    }
   }
 }
 
