--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -7,11 +7,11 @@
   height: calc(100vh - 128px);
 
   .app-content {
-    margin: 24px auto;
+    margin: 32px auto;
     max-width: 646px;
   }
   .app-content-wide {
-    margin: 24px auto;
+    margin: 32px auto;
     max-width: 1024px;
   }
 }
