--- a/src/theme.scss
+++ b/src/theme.scss
@@ -12,7 +12,7 @@
 //$fireface-app-accent: mat-palette($mat-cyan, 100, 300, A100);
 
 $fireface-app-primary: mat-palette($mat-blue, 500, 700, 800);
-$fireface-app-accent: mat-palette($mat-yellow, 500, 700, 800);
+$fireface-app-accent: mat-palette($mat-amber, 400, 600, 800);
 
 // The warn palette is optional (defaults to red).
 $fireface-app-warn: mat-palette($mat-red);
